<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/make">

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity"
        >
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center"
            >

            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/btn_start"
                android:text="Start"
               android:layout_marginLeft="35dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/button_style"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/timer"
                android:text="00:00"
                android:textSize="30sp"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="4dp"
                android:textColor="@color/Timer"
                />
            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="Reset"
                android:id="@+id/btn_stop"
                android:layout_marginRight="40dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/button_style"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/barcelona"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/Image_Barc"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/Image_Barc"
                    android:text="@string/Team_a"
                    android:id="@+id/img_bar"
                    android:textColor="@color/Timer"
                    android:layout_marginBottom="4dp"

                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/score"
                    android:id="@+id/goal_a"
                    android:layout_below="@+id/img_bar"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/button_style"
                    android:layout_marginBottom="4dp"
                    android:layout_marginRight="10dp"
                    android:onClick="goalA"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/goal_a"
                    android:layout_below="@+id/img_bar"
                    android:text="@string/number"
                    android:id="@+id/goal"
                    android:textSize="30sp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/Timer"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/penalty_A"
                    android:text="@string/penalty"
                    android:layout_below="@+id/goal_a"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/button_style"
                    android:layout_marginBottom="4dp"
                    android:layout_marginRight="10dp"
                    android:onClick="penaltyA"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/penalty_no1"
                    android:text="@string/number"
                    android:layout_toRightOf="@+id/penalty_A"
                    android:layout_below="@+id/goal"
                    android:textSize="30sp"
                    android:layout_marginBottom="8dp"
                    android:textColor="@color/Timer"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/Fouls_a"
                    android:text="@string/Foul"
                    android:layout_below="@+id/penalty_A"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/button_style"
                    android:layout_marginBottom="4dp"
                    android:layout_marginRight="10dp"
                    android:onClick="foulA"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/foul_no1"
                    android:text="@string/number"
                    android:layout_toRightOf="@+id/Fouls_a"
                    android:layout_below="@+id/penalty_no1"
                    android:textSize="30sp"
                    android:layout_marginBottom="8dp"
                    android:textColor="@color/Timer"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/Red_A"
                    android:text="@string/Card_r"
                    android:layout_below="@+id/Fouls_a"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/button_style"
                    android:layout_marginBottom="4dp"
                    android:layout_marginRight="10dp"
                    android:onClick="redcardA"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/red_no1"
                    android:text="@string/number"
                    android:layout_toRightOf="@+id/Red_A"
                    android:layout_below="@+id/foul_no1"
                    android:textSize="30sp"
                    android:layout_marginBottom="8dp"
                    android:textColor="@color/Timer"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/yellow_A"
                    android:text="@string/card_y"
                    android:layout_below="@+id/Red_A"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/button_style"
                    android:layout_marginBottom="4dp"
                    android:layout_marginRight="10dp"
                    android:onClick="yellowcardA"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/yellow_card_A"
                    android:text="@string/number"
                    android:layout_toRightOf="@+id/yellow_A"
                    android:layout_below="@+id/red_no1"
                    android:textSize="30sp"
                    android:textColor="@color/Timer"/>

            </RelativeLayout>
            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:background="@color/btn"/>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/real_madrid"
                android:layout_centerHorizontal="true"
                android:id="@+id/Image_madrid"
                android:layout_marginLeft="12dp"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/Image_madrid"
                android:text="@string/Team_b"
                android:id="@+id/img"
                android:layout_marginLeft="12dp"
                android:textColor="@color/Timer"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score"
                android:id="@+id/goal_b"
                android:layout_below="@+id/img"
               android:layout_centerHorizontal="true"
                android:background="@drawable/button_style"
                android:layout_marginBottom="4dp"
                android:layout_marginRight="10dp"
                android:onClick="goalB"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/goal_b"
                android:layout_below="@+id/img"
                android:text="@string/number"
                android:id="@+id/goal_value"
                android:textSize="30sp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="4dp"
                android:textColor="@color/Timer"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/penalty_B"
                android:text="@string/penalty"
                android:layout_below="@+id/goal_b"
                android:layout_centerHorizontal="true"
                android:background="@drawable/button_style"
                android:layout_marginBottom="4dp"
                android:layout_marginRight="10dp"
                android:onClick="penaltyB"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/penalty_no2"
                android:text="@string/number"
                android:layout_toRightOf="@+id/penalty_B"
                android:layout_below="@+id/goal_value"
                android:textSize="30sp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/Timer"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Fouls_b"
                android:text="@string/Foul"
                android:layout_below="@+id/penalty_B"
                android:layout_centerHorizontal="true"
                android:background="@drawable/button_style"
                android:layout_marginBottom="4dp"
                android:layout_marginRight="10dp"
                android:onClick="foulB"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/foul_no"
                android:text="@string/number"
                android:layout_toRightOf="@+id/Fouls_b"
                android:layout_below="@+id/penalty_no2"
                android:textSize="30sp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/Timer"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Red_B"
                android:text="@string/Card_r"
                android:layout_below="@+id/Fouls_b"
                android:layout_centerHorizontal="true"
                android:background="@drawable/button_style"
                android:layout_marginBottom="4dp"
                android:layout_marginRight="10dp"
                android:onClick="redcardB"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/red_no2"
                android:text="@string/number"
                android:layout_toRightOf="@+id/Red_B"
                android:layout_below="@+id/foul_no"
                android:textSize="30sp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/Timer"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/yellow_B"
                android:text="@string/card_y"
                android:layout_below="@+id/Red_B"
                android:layout_centerHorizontal="true"
                android:background="@drawable/button_style"
                android:layout_marginBottom="4dp"
                android:layout_marginRight="10dp"
                android:onClick="yellowcardB"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/yellow_card_B"
                android:text="@string/number"
                android:layout_toRightOf="@+id/yellow_B"
                android:layout_below="@+id/red_no2"
                android:textSize="30sp"
                android:textColor="@color/Timer"/>

        </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="horizontal">
        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/quit"
            android:text="@string/Exit"
            android:background="@drawable/button_style"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="8dp"/>
        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/reset"
            android:text="@string/Reset"
            android:background="@drawable/button_style"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:onClick="reset"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>